Add important commands to readMe