@@ -32,7 +32,11 @@ After installing all the prerequisites you can run the Kyas Node and Client prog
 ## JavaFx Wallet Client and Miner
 
 ### Prerequisites
-A working `JavaFx SDK`installation.
+A working `JavaFX SDK`installation. You will need a version of Java installed that is newer or equal to `Java 14`. 
+You can check your currently active java version by running the command `java -version`.
+### Running the JAR
+You can execute the Client by typing the following command into a console:
+`java --module-path "PATH_TO_JAVAFX_LIB_DIR" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.web,javafx.swing -jar PATH_TO_JAR`
 
 ## Android Wallet
 
